<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/logo_refuerzo"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAsesores"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asesores"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/btnInforme"
        app:layout_constraintStart_toEndOf="@id/btnAlumnos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnAlumnos"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alumnos"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnAsistencia"
        app:layout_constraintEnd_toStartOf="@+id/btnAsesores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnInforme"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAsistencia"
        app:layout_constraintTop_toBottomOf="@+id/btnAsesores"
        tools:ignore="MissingConstraints,VisualLintBounds,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnAsistencia"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asistencia"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/btnInforme"
        app:layout_constraintTop_toBottomOf="@id/btnAlumnos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
